# Slippipedia

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  SlippiStatsApp.pro  Slippipedia.pro  hot_reload_config.json  main.cpp  resources.qrc  utils.cpp  utils.h  utils_mac.mm
android/: AndroidManifest.xml
android/res/values/: strings.xml
ios/: Project-Info.plist
macx/: app_icon.icns
qml/: Main.qml  config.json
qml/Slippipedia/: CMakeLists.txt  Main.qml  qmldir
qml/Slippipedia/controls/generic/: AppToolButton.qml  AppToolText.qml  BaseNavigationStack.qml  BasePage.qml  CustomListView.qml  CustomRadio.qml  CustomTabButton.qml  CustomTabIcon.qml  CustomToolTip.qml  DateRangeRow.qml  GameCountRow.qml  OptionButton.qml  PlayerInfoRow.qml  RangeOptions.qml  TextInputField.qml
qml/Slippipedia/controls/icons/: CharacterIcon.qml  StageIcon.qml  StockIcon.qml
qml/Slippipedia/controls/listitems/: CheckableListItem.qml  CustomListItem.qml  PunishListItem.qml  ReplayListItem.qml  ReplaySectionHeader.qml
qml/Slippipedia/controls/visual/: Divider.qml  LoadingIcon.qml  ReplayIcons.qml  StockIcons.qml  UiAnimation.qml
qml/Slippipedia/model/: Constants.qml  DataModel.qml
qml/Slippipedia/model/data/: MeleeData.qml
qml/Slippipedia/model/db/: DataBase.qml
qml/Slippipedia/model/filter/: FilterSettings.qml  GameFilterSettings.qml  PlayerFilterSettings.qml  PunishFilterSettings.qml  TextFilter.qml
qml/Slippipedia/model/stats/: PlayerStats.qml  ReplayStats.qml  Stat.qml
qml/Slippipedia/model/util/: RangeSettings.qml  TextSettings.qml
qml/Slippipedia/pages/: AboutPage.qml  AnalyticsPage.qml  BrowserPage.qml  DatabasePage.qml  FilterPage.qml  ReplayListPage.qml  SetupPage.qml  StatisticsPage.qml
qml/Slippipedia/views/analytics/: AnalyticsListView.qml
qml/Slippipedia/views/browser/: PunishListView.qml  ReplayListView.qml
qml/Slippipedia/views/filter/: FilterDescription.qml  FilterInfoItem.qml  FilterModal.qml  GameFilterOptions.qml  PlayerFilterDescription.qml  PlayerFilterOptions.qml  PunishFilterOptions.qml  QuickFilterOptions.qml  ResultFilterOptions.qml
qml/Slippipedia/views/grids/: CharacterGrid.qml  NameGrid.qml  StageGrid.qml  StatsGrid.qml
qml/Slippipedia/views/stats/: StatsInfoItem.qml  StatsList.qml  StatsNeutral.qml  StatsOverview.qml  StatsTags.qml
qml/controls/: AppToolButton.qml  CharacterGrid.qml  CharacterIcon.qml  FilterInfoItem.qml  NameGrid.qml  PlayerFilterOptions.qml  ReplayIcons.qml  ReplayListItem.qml  ReplaySectionHeader.qml  StageGrid.qml  StageIcon.qml  StockIcon.qml  TextInputField.qml
qml/model/: DataBase.qml  DataModel.qml  FilterSettings.qml  GameFilterSettings.qml  MeleeData.qml  PlayerFilterSettings.qml  ReplayStats.qml  StageFilterSettings.qml  TextFilter.qml
qml/model/data/: qmldir
qml/model/db/: DataBase.qml
qml/model/filter/: FilterSettings.qml  GameFilterSettings.qml  PlayerFilterSettings.qml  TextFilter.qml
qml/model/stats/: PlayerStats.qml  ReplayStats.qml  Stat.qml
qml/pages/: AnalyticsPage.qml  BasePage.qml  DatabasePage.qml  FilterModal.qml  FilterPage.qml  ReplayListPage.qml  StatisticsPage.qml
qml/views/controls/: AnalyticsListView.qml  BaseNavigationStack.qml  DateRangeRow.qml  FilterInfoItem.qml  FilterModal.qml  GameFilterOptions.qml  PlayerFilterOptions.qml  TextInputField.qml
qml/views/filter/: GameFilterOptions.qml  PlayerFilterOptions.qml  ResultFilterOptions.qml
qml/views/grids/: CharacterGrid.qml  StageGrid.qml  StatsGrid.qml
qml/views/icons/: CharacterIcon.qml  StageIcon.qml  StockIcon.qml
qml/views/listitems/: CheckableListItem.qml  ReplayListItem.qml  ReplaySectionHeader.qml  StatsInfoItem.qml
qml/views/stats/: StatsGrids.qml  StatsOverview.qml  StatsTags.qml
qml/views/visual/: LoadingIcon.qml  ReplayIcons.qml  UiAnimation.qml
replays/: fox-pika-crashing.slp
slippi/: CMakeLists.txt  slippi.pri  slippiparser.cpp  slippiparser.h  slippireplay.cpp  slippireplay.h
src/: main.cpp  utils.cpp  utils.h
win/: app_icon.rc
