cmake_minimum_required(VERSION 3.16)

project(Slippipedia VERSION 2.0 LANGUAGES CXX)

set(CMAKE_AUTOMOC ON)
set(CMAKE_CXX_STANDARD_REQUIRED ON)

set(PRODUCT_IDENTIFIER "at.cb.Slippipedia")
set(PRODUCT_VERSION_NAME "2.0")
set(PRODUCT_VERSION_CODE 6)

add_subdirectory(slippi)

set(QML_IMPORT_PATH qml CACHE STRING "Qt Creator 4.1 extra qml import paths")

# license for at.cb.Slippipedia, version 5, plugins: Google Analytics
#PRODUCT_LICENSE_KEY = "8C9C90BA2A0EBF16AA9F20299448C6518766E22156B1FF750575060B3948C72943399878C19317A6A109F10396A78110E0505CBECFA7151F12702A6AD9B7F474CFE5BD9A4EE26C76C61F456A85854E46C96A474215332DA5AC71B9E732F6A9FBEE50F7027DA2856A2C236622967AB177E683AA05BFD8DBAD6A45F390212490DED9466D5CA64628282FD3D1E870D49E839447CC42A3AA52FA48E0AAA002568FBFC458161869A525230B4F78E2F4B99BC9914A904BEDD5A8F681B495CD0A248364DA0DB4B2C9AB9EE75F41D864F172EFD3E3AF765B2FF7EBE354DB8463F94CA81018D8CD787CB9B0A8E34DA2A33B74171D689B671BFAA7A3A406D28B09B163C83EB881C77BC3E590492A0D6F06BA7C9138E517ACE6360C369141EA0FCD366081028EA991FB5F995F323500F7FE499C319BCC40446B4F875AB900AAB090921A031942D9FF0C11B617060E21633BF0AD6DD3"

# license for at.cb.Slippipedia, version 6, plugins: Google Analytics
set(PRODUCT_LICENSE_KEY "85C054425F019B617ED6F718796D578E83BACDBFBDF66BC74F20E91FBC57F15376A94231690FB9A3154BB8A0AD8F918C4F52A2ACC15BCA230EB21E6182C2B2D6C9D3488A34EDA378ED114C9DD985917182226742FF9379D356878BFE0733917A9A668CC3B1AD1F9B54C9DC9E9ECB535F60847622F3264043BE96F0A888B14861631593FB075763F6D26FC2622D42235A155EE64FF789C1787CC11D7388090CD59B1E1827322886EA21660399315FF9C635DD88FAE104F9E550F9C6EEAF45EB1DC3E36FCA173BC7F1E90D631BE7BD15541116D0D425958A0A9710C2F2FF37EAE7181B19097D7F0129F8303EFCBFE28346B883569CCBD7D6657D3B53BB09B96236CE75BE14B8B32767E999763E2A87BCB6F1E431D6EB8515AB159289169E6555BE95F962493015F530E19FE82C3F130A397A604C5D9C51A68C339343C00BFEDD9AF37B508EBECB4FF8C57D7E25D5E28818")

find_package(Qt6 6.3.0 COMPONENTS Quick Qml REQUIRED)

file(GLOB_RECURSE QmlFolder RELATIVE ${CMAKE_CURRENT_SOURCE_DIR} qml/*.qml)
file(GLOB_RECURSE AssetsFolder RELATIVE ${CMAKE_CURRENT_SOURCE_DIR} assets/* qml/config.json qml/*/qmldir)
file(GLOB Sources RELATIVE ${CMAKE_CURRENT_SOURCE_DIR} src/*.cpp src/*.h)

# resource files that are always deployed because they are used by external tools
file(GLOB_RECURSE ResFiles RELATIVE ${CMAKE_CURRENT_SOURCE_DIR} resfiles/*)

# Executable should have same name as project
qt_add_executable(${CMAKE_PROJECT_NAME}
    ${Sources}
    ${QmlFolder}
    ${AssetsFolder}
    ${ResFiles}
)

include_directories(slippi)

add_compile_definitions(QML_MODULE_NAME=\"Slippipedia\")

# Find Felgo AFTER add_executable, because it sets properties on the target
find_package(Felgo REQUIRED)

deploy_resources("${QmlFolder};${AssetsFolder}")

deploy_resources("${ResFiles}")

qt_add_qml_module(${CMAKE_PROJECT_NAME}
    URI EmptyFelgoTest
    VERSION 1.0
# uncomment for publishing:
    #QML_FILES ${QmlFolder}
    #RESOURCES ${AssetsFolder}
    NO_RESOURCE_TARGET_PATH
)

target_compile_definitions(${CMAKE_PROJECT_NAME}
    PRIVATE $<$<OR:$<CONFIG:Debug>,$<CONFIG:RelWithDebInfo>>:QT_QML_DEBUG>)

target_link_libraries(${CMAKE_PROJECT_NAME}
    PRIVATE Qt6::Quick Qt6::Qml
    Felgo
    Slippi
)
