cmake_minimum_required(VERSION 3.16)

project(Slippipedia VERSION 2.0 LANGUAGES CXX)

option(SLIPPIPEDIA_FELGO_LIVE "Use live client module" OFF)

set(QT_NO_FIND_QMLSC ON)
set(CMAKE_AUTOMOC ON)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
set(CMAKE_CXX_STANDARD 17)

find_package(Felgo REQUIRED)
find_package(Qt6 REQUIRED COMPONENTS WebView)

set(PRODUCT_IDENTIFIER "at.cb.Slippipedia")
set(PRODUCT_VERSION_NAME "2.1")
set(PRODUCT_VERSION_CODE 7)

set(PRODUCT_STAGE "publish")
# set(PRODUCT_STAGE "test")

add_subdirectory(slippi)

set(QML_IMPORT_PATH "${CMAKE_CURRENT_SOURCE_DIR}/qml" CACHE STRING "Qt Creator 4.1 extra qml import paths")

# license for at.cb.Slippipedia, version 5, plugins: Google Analytics
#set(PRODUCT_LICENSE_KEY "8C9C90BA2A0EBF16AA9F20299448C6518766E22156B1FF750575060B3948C72943399878C19317A6A109F10396A78110E0505CBECFA7151F12702A6AD9B7F474CFE5BD9A4EE26C76C61F456A85854E46C96A474215332DA5AC71B9E732F6A9FBEE50F7027DA2856A2C236622967AB177E683AA05BFD8DBAD6A45F390212490DED9466D5CA64628282FD3D1E870D49E839447CC42A3AA52FA48E0AAA002568FBFC458161869A525230B4F78E2F4B99BC9914A904BEDD5A8F681B495CD0A248364DA0DB4B2C9AB9EE75F41D864F172EFD3E3AF765B2FF7EBE354DB8463F94CA81018D8CD787CB9B0A8E34DA2A33B74171D689B671BFAA7A3A406D28B09B163C83EB881C77BC3E590492A0D6F06BA7C9138E517ACE6360C369141EA0FCD366081028EA991FB5F995F323500F7FE499C319BCC40446B4F875AB900AAB090921A031942D9FF0C11B617060E21633BF0AD6DD3")

# license for at.cb.Slippipedia, version 6, plugins: Google Analytics
#set(PRODUCT_LICENSE_KEY "85C054425F019B617ED6F718796D578E83BACDBFBDF66BC74F20E91FBC57F15376A94231690FB9A3154BB8A0AD8F918C4F52A2ACC15BCA230EB21E6182C2B2D6C9D3488A34EDA378ED114C9DD985917182226742FF9379D356878BFE0733917A9A668CC3B1AD1F9B54C9DC9E9ECB535F60847622F3264043BE96F0A888B14861631593FB075763F6D26FC2622D42235A155EE64FF789C1787CC11D7388090CD59B1E1827322886EA21660399315FF9C635DD88FAE104F9E550F9C6EEAF45EB1DC3E36FCA173BC7F1E90D631BE7BD15541116D0D425958A0A9710C2F2FF37EAE7181B19097D7F0129F8303EFCBFE28346B883569CCBD7D6657D3B53BB09B96236CE75BE14B8B32767E999763E2A87BCB6F1E431D6EB8515AB159289169E6555BE95F962493015F530E19FE82C3F130A397A604C5D9C51A68C339343C00BFEDD9AF37B508EBECB4FF8C57D7E25D5E28818")

# license for at.cb.Slippipedia, version 7, plugins: Firebase, Googleanalytics
set(PRODUCT_LICENSE_KEY "3BCBD0CD760DE0045E6658A7DE535D9E326179E7BA170B1381B63DEC09C07555F8831237B5C21E94840ACFF0666EE08950AC297FE1DD1D3AF1B4076098E92144A7835DEF5727F5642CF28A02BDE2E2C3E6DEE2C574BB6704581CE86D347C9B55287DF5F57590ACB7E5189C19F06892128A614A5BC14796F590905F931DA94BD0EC3C8BFD824193703090033EBF6A27C858BA92504E1BDBAADB4BDC57B58BB0F19FD6EAF683F111443C9EA8DE8E98A2E675CDAAD8F60327980B180E6C66D0D9554FE13E159CC858C936D82C8598F19BD436C346E24DB18BAA813B35CD99DF8F7DFD96B1BDCDFDEA2DA7CE80026F9488434212E2D3FED718368B3A204A46CCBCC34574689B189C7DE3048F7C3930197A7213818294174EAAFA3CE6E1A0F85D7BDB54DF014D3322B02EC7DF47094049069EAA65100492F5D73D0525A9C974265683BF0F873D2B7BD9BFAFE44E447004CC1AC54B71C46709091ABAE66AD52A7FA5A2")

# Note: do NOT add the qmldir file here. It is only used for Felgo Live deployment.
#       for regular build, it is automatically generated.
file(GLOB_RECURSE QmlFolder RELATIVE ${CMAKE_CURRENT_SOURCE_DIR} qml/*.qml)
file(GLOB_RECURSE AssetsFolder RELATIVE ${CMAKE_CURRENT_SOURCE_DIR} assets/* qml/config.json)

set(SrcPattern src/*.cpp src/*.h)

if(APPLE)
    list(APPEND SrcPattern src/*.mm)
endif()

file(GLOB Sources RELATIVE ${CMAKE_CURRENT_SOURCE_DIR} ${SrcPattern})

# resource files that are always deployed because they are used by external tools
file(GLOB_RECURSE ResFiles RELATIVE ${CMAKE_CURRENT_SOURCE_DIR} resfiles/*)

# Executable should have same name as project
qt_add_executable(Slippipedia
    ${Sources}
    ${QmlFolder}
    ${AssetsFolder}
    ${ResFiles}
)

felgo_configure_executable(Slippipedia)

include_directories(src slippi)

add_compile_definitions(QML_MODULE_NAME=\"Slippipedia\")

deploy_resources("${ResFiles}")

if(SLIPPIPEDIA_FELGO_LIVE)
  set(FelgoHotReload_DIR "D:/Programme/FelgoHotReload/client/6.8.3/mingw_64/lib/cmake/FelgoHotReload")
  add_compile_definitions(FELGO_LIVE=1)
  find_package(FelgoHotReload)
  target_link_libraries(Slippipedia PRIVATE FelgoHotReload Qt6::WebView)

  set(NO_CACHEGEN_OPTION "NO_CACHEGEN") # disable QML compiler (faster builds)
else ()
  set(NO_CACHEGEN_OPTION "")
endif()

# Define singleton QML files before adding the QML module
set_source_files_properties(
  qml/Slippipedia/model/data/MeleeData.qml
  qml/Slippipedia/model/Constants.qml
  PROPERTIES QT_QML_SINGLETON_TYPE TRUE)

qt_add_qml_module(Slippipedia
    URI Slippipedia
    VERSION 1.0
    OUTPUT_DIRECTORY "qml/Slippipedia"
    QML_FILES ${QmlFolder}
    RESOURCES ${AssetsFolder}
    NO_RESOURCE_TARGET_PATH
    # use this to disable QML compiler (faster development)
    ${NO_CACHEGEN_OPTION}
)


target_compile_definitions(Slippipedia
    PRIVATE $<$<OR:$<CONFIG:Debug>,$<CONFIG:RelWithDebInfo>>:QT_QML_DEBUG>)

target_link_libraries(Slippipedia PRIVATE Felgo)
