cmake_minimum_required(VERSION 3.16)

project(Slippipedia VERSION 2.0 LANGUAGES CXX)

option(SLIPPIPEDIA_FELGO_LIVE "Use live client module" OFF)

set(QT_NO_FIND_QMLSC ON)
set(CMAKE_AUTOMOC ON)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
set(CMAKE_CXX_STANDARD 17)

find_package(Felgo REQUIRED)
find_package(Qt6 REQUIRED COMPONENTS WebView)

qt_policy(SET QTP0004 NEW)

set(PRODUCT_IDENTIFIER "at.cb.Slippipedia")
set(PRODUCT_VERSION_NAME "2.2 ALPHA")
set(PRODUCT_VERSION_CODE 8)

if(CMAKE_BUILD_TYPE STREQUAL "Release")
    set(PRODUCT_STAGE "publish")
    message("Publish build")
else()
    set(PRODUCT_STAGE "test")
    message("Test build")
endif()

add_subdirectory(slippi)

# license for at.cb.Slippipedia, version 5, plugins: Google Analytics
#set(PRODUCT_LICENSE_KEY "8C9C90BA2A0EBF16AA9F20299448C6518766E22156B1FF750575060B3948C72943399878C19317A6A109F10396A78110E0505CBECFA7151F12702A6AD9B7F474CFE5BD9A4EE26C76C61F456A85854E46C96A474215332DA5AC71B9E732F6A9FBEE50F7027DA2856A2C236622967AB177E683AA05BFD8DBAD6A45F390212490DED9466D5CA64628282FD3D1E870D49E839447CC42A3AA52FA48E0AAA002568FBFC458161869A525230B4F78E2F4B99BC9914A904BEDD5A8F681B495CD0A248364DA0DB4B2C9AB9EE75F41D864F172EFD3E3AF765B2FF7EBE354DB8463F94CA81018D8CD787CB9B0A8E34DA2A33B74171D689B671BFAA7A3A406D28B09B163C83EB881C77BC3E590492A0D6F06BA7C9138E517ACE6360C369141EA0FCD366081028EA991FB5F995F323500F7FE499C319BCC40446B4F875AB900AAB090921A031942D9FF0C11B617060E21633BF0AD6DD3")

# license for at.cb.Slippipedia, version 6, plugins: Google Analytics
#set(PRODUCT_LICENSE_KEY "85C054425F019B617ED6F718796D578E83BACDBFBDF66BC74F20E91FBC57F15376A94231690FB9A3154BB8A0AD8F918C4F52A2ACC15BCA230EB21E6182C2B2D6C9D3488A34EDA378ED114C9DD985917182226742FF9379D356878BFE0733917A9A668CC3B1AD1F9B54C9DC9E9ECB535F60847622F3264043BE96F0A888B14861631593FB075763F6D26FC2622D42235A155EE64FF789C1787CC11D7388090CD59B1E1827322886EA21660399315FF9C635DD88FAE104F9E550F9C6EEAF45EB1DC3E36FCA173BC7F1E90D631BE7BD15541116D0D425958A0A9710C2F2FF37EAE7181B19097D7F0129F8303EFCBFE28346B883569CCBD7D6657D3B53BB09B96236CE75BE14B8B32767E999763E2A87BCB6F1E431D6EB8515AB159289169E6555BE95F962493015F530E19FE82C3F130A397A604C5D9C51A68C339343C00BFEDD9AF37B508EBECB4FF8C57D7E25D5E28818")

# license for at.cb.Slippipedia, version 7, plugins: Firebase, Googleanalytics
# set(PRODUCT_LICENSE_KEY "3BCBD0CD760DE0045E6658A7DE535D9E326179E7BA170B1381B63DEC09C07555F8831237B5C21E94840ACFF0666EE08950AC297FE1DD1D3AF1B4076098E92144A7835DEF5727F5642CF28A02BDE2E2C3E6DEE2C574BB6704581CE86D347C9B55287DF5F57590ACB7E5189C19F06892128A614A5BC14796F590905F931DA94BD0EC3C8BFD824193703090033EBF6A27C858BA92504E1BDBAADB4BDC57B58BB0F19FD6EAF683F111443C9EA8DE8E98A2E675CDAAD8F60327980B180E6C66D0D9554FE13E159CC858C936D82C8598F19BD436C346E24DB18BAA813B35CD99DF8F7DFD96B1BDCDFDEA2DA7CE80026F9488434212E2D3FED718368B3A204A46CCBCC34574689B189C7DE3048F7C3930197A7213818294174EAAFA3CE6E1A0F85D7BDB54DF014D3322B02EC7DF47094049069EAA65100492F5D73D0525A9C974265683BF0F873D2B7BD9BFAFE44E447004CC1AC54B71C46709091ABAE66AD52A7FA5A2")

# license for at.cb.Slippipedia, version 8, plugins: Firebase
set(PRODUCT_LICENSE_KEY "ED515985BD0D7633C11136FEA2FB033F629D6DE5D4BAE11533B69D38D4808A8DB675A681034B5A4702FE32DF2BBD31EB4CBBED5D755FE64944591AAFE9B2C7F8A1A2F7B1B8F29DA046A7E29B8E5A35AE2A3D8AE93BFB6C7CE22C0F28A7F4C144E89C78473E90D69C4AB36B758D09C77999E05C0750C02538BDBB7B2F20767C0B91C8DF9A704D093EC28AD68A8ABC41F586E3C0104C48B369BECF727C7F731EB95A8A838E6F8DC891CFFEDF3029B66DCE5F8198428D8EE6B22B4E40A1E9ABB8E041E5F6651283A3C27FBFBC643573DBE0C4E47827884398220E16721E0749A009A377F8161EC5E39013CBE827B0D7592F21C0F61FF33724A62AF374CF717C057C846439F7EF377BF744B3223410461C02A634728D221F1AE23EC9938D70F653FC1B36F19A0A80761566D3FC48E697F5C16CD04D4E510AAA1BFA2E34BBC02108FC")

# Note: do NOT add the qmldir file here. It is only used for Felgo Live deployment.
#       for regular build, it is automatically generated.
file(GLOB_RECURSE AssetsFolder RELATIVE ${CMAKE_CURRENT_SOURCE_DIR} assets/* qml/config.json)

set(SrcPattern src/*.cpp src/*.h)

if(APPLE)
    list(APPEND SrcPattern src/*.mm)
endif()

file(GLOB Sources RELATIVE ${CMAKE_CURRENT_SOURCE_DIR} ${SrcPattern})

# resource files that are always deployed because they are used by external tools
file(GLOB_RECURSE ResFiles RELATIVE ${CMAKE_CURRENT_SOURCE_DIR} resfiles/*)

# Set runtime path for shared libraries in installation
list(APPEND CMAKE_INSTALL_RPATH "./${CMAKE_INSTALL_LIBDIR}")

# Executable should have same name as project
qt_add_executable(SlippipediaApp
    ${Sources}
    qml/Main.qml
    ${AssetsFolder}
    ${ResFiles}
)

# Set output name for Windows (Slippipedia.exe) and macOS (Slippipedia.app)
# and runtime output name for Unix (Slippipedia instead of SlippipediaApp.run)
set_target_properties(SlippipediaApp PROPERTIES
    OUTPUT_NAME Slippipedia
    RUNTIME_OUTPUT_NAME Slippipedia)

felgo_configure_executable(SlippipediaApp)

include_directories(src slippi)

add_compile_definitions(QML_MODULE_NAME=\"Slippipedia\")

if(SLIPPIPEDIA_FELGO_LIVE)
  set(FelgoHotReload_DIR "D:/Programme/FelgoHotReload/client/6.8.3/mingw_64/lib/cmake/FelgoHotReload")
  add_compile_definitions(FELGO_LIVE=1)
  find_package(FelgoHotReload)
  target_link_libraries(SlippipediaApp PRIVATE FelgoHotReload Qt6::WebView)

  set(NO_CACHEGEN_OPTION "NO_CACHEGEN") # disable QML compiler (faster builds)
else ()
  set(NO_CACHEGEN_OPTION "")
endif()

add_subdirectory(qml/Slippipedia)

qt_add_qml_module(SlippipediaApp
    VERSION 1.0
    URI SlippipediaApp
    RESOURCE_PREFIX ""
    OUTPUT_DIRECTORY ""
    QML_FILES qml/Main.qml
    RESOURCES ${AssetsFolder}
    NO_RESOURCE_TARGET_PATH
    ${NO_CACHEGEN_OPTION}
)

list(APPEND QML_DIRS "${CMAKE_CURRENT_BINARY_DIR}/qml" "${CMAKE_CURRENT_SOURCE_DIR}/qml")
set(QML_IMPORT_PATH "${QML_DIRS}" CACHE STRING "Qt Creator 4.1 extra qml import paths" FORCE)

target_compile_definitions(SlippipediaApp
    PRIVATE $<$<OR:$<CONFIG:Debug>,$<CONFIG:RelWithDebInfo>>:QT_QML_DEBUG>)

target_link_libraries(SlippipediaApp PRIVATE Felgo Slippipedia)

# Install the executable
install(TARGETS SlippipediaApp
    BUNDLE  DESTINATION .
    RUNTIME DESTINATION ${CMAKE_INSTALL_PREFIX}
)

install(FILES ${ResFiles} DESTINATION "resfiles")

if(APPLE)
    # Sign app bundle on mac
    set(DEPLOY_TOOL_OPTIONS "-codesign=VB6Z5JQJTD")
elseif(WIN32)
    # Do not put binaries in "bin"
    set(DEPLOY_TOOL_OPTIONS "-libdir .")
else()
    set(DEPLOY_TOOL_OPTIONS "")
endif()

# Generate the deployment script for MyApp.
qt_generate_deploy_qml_app_script(
    TARGET SlippipediaApp
    OUTPUT_SCRIPT deploy_script
    NO_UNSUPPORTED_PLATFORM_ERROR
    DEPLOY_TOOL_OPTIONS "-qmldir ${CMAKE_CURRENT_LIST_DIR}/qml ${DEPLOY_TOOL_OPTIONS}"
)

# Run the deployment script during installation (on "cmake --install").
message("Run deploy script on install: ${deploy_script}")
install(SCRIPT ${deploy_script})
